Restyle table inputs

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -36,3 +36,8 @@ p {
     text-overflow: ellipsis;
     overflow: hidden;*/
 }
+
+.data-table input {
+    display: block;
+    border: 1px solid black;
+}
